@@ -1,10 +1,14 @@
 package com.project.blog_application.services;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.project.blog_application.DTO.BlogPostDTO;
+import com.project.blog_application.DTO.BlogPostListDTO;
 import com.project.blog_application.DTO.PageResponse;
 import com.project.blog_application.entities.BlogPost;
 import com.project.blog_application.entities.User;
 import com.project.blog_application.exceptions.ResourceNotFoundException;
+import com.project.blog_application.metrics.BlogMetrics;
 import com.project.blog_application.repository.BlogPostRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,45 +30,68 @@ public class BlogPostService {
 
     private final BlogPostRepository blogPostRepository;
     private final FileStorageService fileStorageService;
+    private final BlogMetrics blogMetrics;
+    private final ObjectMapper objectMapper;
+
 
     @Autowired
     public BlogPostService(
             BlogPostRepository blogPostRepository,
-            FileStorageService fileStorageService
+            FileStorageService fileStorageService,
+            BlogMetrics blogMetrics,
+            ObjectMapper objectMapper
     ) {
         this.blogPostRepository = blogPostRepository;
         this.fileStorageService = fileStorageService;
+        this.blogMetrics = blogMetrics;
+        this.objectMapper = objectMapper;
     }
 
-    // Cache paginated DTOs - key includes page number and size
-    public PageResponse<BlogPostDTO> getAllBlogPostsDTO(Pageable pageable) {
-        logger.info("🔍 Cache MISS - Fetching paginated posts from DATABASE - page: {}, size: {}",
+    // ✅ BEST PRACTICE: Cache JSON string for paginated posts
+    @Cacheable(
+            value = "blogPostsPageJson",
+            key = "#pageable.pageNumber + '-' + #pageable.pageSize + '-' + #pageable.sort.toString()"
+    )
+    public String getAllBlogPostsJson(Pageable pageable) throws JsonProcessingException {
+        logger.info("🔴 CACHE MISS - Fetching paginated posts from DB (page: {}, size: {})",
                 pageable.getPageNumber(), pageable.getPageSize());
+        blogMetrics.incrementCacheMiss();
 
         Page<BlogPost> blogPosts = blogPostRepository.findAllWithUser(pageable);
 
-        List<BlogPostDTO> dtoList = blogPosts.getContent().stream()
-                .map(BlogPostDTO::new)
-                .collect(Collectors.toList());
+        List<BlogPostListDTO> dtoList = blogPosts.getContent()
+                .stream()
+                .map(BlogPostListDTO::new)
+                .toList();
 
-        return new PageResponse<>(
+        PageResponse<BlogPostListDTO> response = new PageResponse<>(
                 dtoList,
                 blogPosts.getNumber(),
                 blogPosts.getSize(),
                 blogPosts.getTotalElements()
         );
+
+        return objectMapper.writeValueAsString(response);
     }
 
-    // Cache individual post DTO by ID
+    // ✅ BEST PRACTICE: Cache JSON string for individual post
     @Cacheable(value = "blogPost", key = "#id")
-    public BlogPostDTO getBlogPostDTOById(Long id) {
-        logger.info("Cache MISS - Fetching blog post {} from DATABASE", id);
+    public String getBlogPostByIdJson(Long id) throws JsonProcessingException {
+        logger.info("🔴 CACHE MISS - Fetching blog post {} from DB", id);
+        blogMetrics.incrementCacheMiss();
 
         Optional<BlogPost> post = blogPostRepository.findByIdWithUser(id);
         BlogPost blogPost = post.orElseThrow(() ->
                 new ResourceNotFoundException("Blog post not found with id: " + id));
 
-        return new BlogPostDTO(blogPost);
+        BlogPostDTO dto = new BlogPostDTO(blogPost);
+        return objectMapper.writeValueAsString(dto);
+    }
+
+    // ✅ Public method that deserializes cached JSON
+    public BlogPostDTO getBlogPostDTOById(Long id) throws JsonProcessingException {
+        String json = getBlogPostByIdJson(id);
+        return objectMapper.readValue(json, BlogPostDTO.class);
     }
 
     // Non-cached method for internal use (returns entity)
@@ -76,7 +103,7 @@ public class BlogPostService {
 
     // Cache search by title - returns DTOs
     public List<BlogPostDTO> searchByTitleDTO(String title) {
-        logger.info("🔍 Cache MISS - Searching posts by title '{}' from DATABASE", title);
+        logger.info("🔍 Cache MISS - Searching posts by title '{}' from DB", title);
 
         List<BlogPost> posts = blogPostRepository.findByTitleContaining(title);
         return posts.stream()
@@ -86,7 +113,7 @@ public class BlogPostService {
 
     // Cache posts by user ID - returns DTOs
     public List<BlogPostDTO> searchByUserIdDTO(Long userId) {
-        logger.info("Cache MISS - Fetching posts for user {} from DATABASE", userId);
+        logger.info("🔍 Cache MISS - Fetching posts for user {} from DB", userId);
 
         List<BlogPost> posts = blogPostRepository.findByUserId(userId);
         return posts.stream()
@@ -96,7 +123,7 @@ public class BlogPostService {
 
     // Cache search by keyword - returns DTOs
     public List<BlogPostDTO> searchByTitleOrContentDTO(String keyword) {
-        logger.info("Cache MISS - Searching posts by keyword '{}' from DATABASE", keyword);
+        logger.info("🔍 Cache MISS - Searching posts by keyword '{}' from DB", keyword);
 
         List<BlogPost> posts = blogPostRepository.findByTitleOrContentContaining(keyword);
         return posts.stream()
@@ -117,18 +144,18 @@ public class BlogPostService {
         return blogPostRepository.findByTitleOrContentContaining(keyword);
     }
 
-    // Clear all caches when creating post
-    @CacheEvict(value = "blogPost", allEntries = true)
+    // ✅ Clear all caches when creating post
+    @CacheEvict(value = {"blogPost", "blogPostsPageJson"}, allEntries = true)
     public BlogPost createPost(BlogPost blogPost, User user) {
-        logger.info("Creating new blog post and EVICTING list caches");
+        logger.info("✅ Creating new blog post and EVICTING all caches");
         blogPost.setUser(user);
         return blogPostRepository.save(blogPost);
     }
 
-    // Clear individual post cache + all list caches when updating
-    @CacheEvict(value = "blogPost", allEntries = true)
+    // ✅ Clear individual post cache + all list caches when updating
+    @CacheEvict(value = {"blogPost", "blogPostsPageJson"}, allEntries = true)
     public BlogPost updatePost(Long id, BlogPost updatedPost) {
-        logger.info("Updating blog post {} and EVICTING all related caches", id);
+        logger.info("✅ Updating blog post {} and EVICTING all caches", id);
 
         BlogPost existingPost = getBlogPostById(id);
 
@@ -150,10 +177,10 @@ public class BlogPostService {
         return blogPostRepository.save(existingPost);
     }
 
-    // Clear ALL caches when deleting
-    @CacheEvict(value = "blogPost", allEntries = true)
+    // ✅ Clear ALL caches when deleting
+    @CacheEvict(value = {"blogPost", "blogPostsPageJson"}, allEntries = true)
     public void deletePost(Long id) {
-        logger.info("Deleting blog post {} and EVICTING from ALL caches", id);
+        logger.info("✅ Deleting blog post {} and EVICTING all caches", id);
 
         BlogPost existingPost = getBlogPostById(id);
 
